{
  "version": 4,
  "terraform_version": "1.1.4",
  "serial": 8,
  "lineage": "3b2019a1-786a-dfc4-26ee-f8c125c727aa",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:419466290453:internet-gateway/igw-0e7ba038dccf29245",
            "id": "igw-0e7ba038dccf29245",
            "owner_id": "419466290453",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-0b8d2a957031defdb"
          },
          "dependencies": [
            "aws_vpc.public_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicAs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05abc6164541df11b",
            "route_table_id": "rtb-029d6d4f3bd2ce637",
            "subnet_id": "subnet-0889ea0eab5e00fe9"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.public_vpc",
            "module.route_table.aws_route_table.route_table",
            "module.subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "public_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:419466290453:vpc/vpc-0b8d2a957031defdb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-049b64dc74d903944",
            "default_route_table_id": "rtb-018164d4085f1e697",
            "default_security_group_id": "sg-0237361fbb889ef28",
            "dhcp_options_id": "dopt-8156c6e6",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0b8d2a957031defdb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-018164d4085f1e697",
            "owner_id": "419466290453",
            "tags": {
              "Name": "public_vpc"
            },
            "tags_all": {
              "Name": "public_vpc"
            }
          }
        }
      ]
    },
    {
      "module": "module.route_table",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:419466290453:route-table/rtb-029d6d4f3bd2ce637",
            "id": "rtb-029d6d4f3bd2ce637",
            "owner_id": "419466290453",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e7ba038dccf29245",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "web server route table"
            },
            "tags_all": {
              "Name": "web server route table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d2a957031defdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_vpc.public_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_groups",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:419466290453:security-group/sg-0e9eb4bfcb249ab63",
            "description": "A security group for the web server",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow any",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e9eb4bfcb249ab63",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow http calls",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "web-group",
            "name_prefix": "",
            "owner_id": "419466290453",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web Server security group"
            },
            "tags_all": {
              "Name": "Web Server security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b8d2a957031defdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.public_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:419466290453:subnet/subnet-0889ea0eab5e00fe9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0889ea0eab5e00fe9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "419466290453",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "web server subnet"
            },
            "tags_all": {
              "Name": "web server subnet"
            },
            "vpc_id": "vpc-0b8d2a957031defdb"
          },
          "dependencies": [
            "aws_vpc.public_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.web-server",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2_instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06078a297452ba5aa",
            "arn": "arn:aws:ec2:sa-east-1:419466290453:instance/i-0e83fc8758827a8e0",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e83fc8758827a8e0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "mnvkeypair",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0fa2819fe36984598",
            "private_dns": "ip-192-168-0-79.sa-east-1.compute.internal",
            "private_ip": "192.168.0.79",
            "public_ip": "54.233.183.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-090054c308ab6b06b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0889ea0eab5e00fe9",
            "tags": {
              "Name": "Web Server"
            },
            "tags_all": {
              "Name": "Web Server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0e9eb4bfcb249ab63"
            ]
          },
          "dependencies": [
            "aws_vpc.public_vpc",
            "module.security_groups.aws_security_group.security_groups",
            "module.subnet.aws_subnet.public_subnet"
          ]
        }
      ]
    }
  ]
}